tests/model/real/bad_root_enclosure.rsmt2
sat
(
  (define-fun a () Real (root-of-with-enclosure (coeffs 1 0 (- 1)) (- 1.0) 1.0))
)
